--- a/inventory/templates/UI/home.html
+++ b/inventory/templates/UI/home.html
@@ -15,6 +15,7 @@
             <ul>
             <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#products"><i class="fas fa-box"></i>Products</a></li>
+            <li><a href="#about"><i class="fas fa-info-circle"></i>About</a></li>
             </ul>
         </nav>
     </aside>
@@ -113,6 +114,17 @@
         </div>
     {% endfor %}
 </section>
+
+<footer class="footer" id="about">
+    <div class="footer-container">
+        <div class="footer-section about">
+            <h3>About Us</h3>
+            <p>
+                Welcome to our Inventory System. This project is developed only for educational purposes as part of our school project. All content and materials used are for demonstration and learning, with no intention of infringing on copyrights or intellectual property rights.
+            </p>
+        </div>
+    </div>
+</footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
