--- a/inventory/static/home.css
+++ b/inventory/static/home.css
@@ -378,6 +378,7 @@ section {
     font-size: 24px;
     margin-bottom: 15px;
     text-transform: uppercase;
+    font-style: italic;
 }
 
 .footer-section p {
